# DDOBAK-RAG-Source-Collector

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
.cursor/rules/: project-rules.mdc
common/: __init__.py  base_crawler.py  common_crawler.py  crawler_registry.py
docs/: architecture.md  crawler-guide.md  data-structure.md
easylaw/: __init__.py  easylaw_config.py  easylaw_crawler.py  utils.py
law_open_api/: __init__.py  api_crawler.py  law_open_api_config.py
lawtalk/: __init__.py  lawtalk_config.py  lawtalk_crawler.py  test.py  utils.py
lawtalk/cases/: get_guide_data.py  get_qna_data.py  get_solved_data.py
lawtalk/common/: lawtalk_crawler.py
lawtalk/consultation_case/: __init__.py  get_qna_data.py
tests/: test_easylaw.py  test_law_open_api.py  test_lawtalk.py
utils/: s3.py  utils.py  validate_args.py
