[tool.poetry]
name = "ddobak-rag-source-collector"
version = "0.1.0"
description = "Multi-site web crawler for RAG source collection"
authors = ["GU-0 <rjsgud5386@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.13.4"
python-dotenv = "^1.0.0"
click = "^8.1.7"
selenium = { version = "^4.15.0", optional = true }

[tool.poetry.extras]
selenium = ["selenium"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.12.0"
ruff = "^0.1.5"

[tool.poetry.scripts]
start = "main:main"
test-lawtalk = "pytest:main"
test-law-open-api = "pytest:main"
test-easylaw = "pytest:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["S101", "PLR0913", "PLR0912", "PLR0915"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
