[tool.poetry]
name = "ddobak-rag-source-collector"
version = "0.1.0"
description = "Multi-site web crawler for RAG source collection"
authors = ["GU-0 <rjsgud5386@gmail.com>"]
packages = [{include = "lawtalk"}, {include = "law_open_api"}, {include = "easylaw"}, {include = "common"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.13.4"
python-dotenv = "^1.0.0"
click = "^8.1.7"
selenium = { version = "^4.15.0", optional = true }
boto3 = "^1.38.32"

[tool.poetry.extras]
selenium = ["selenium"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.12.0"
ruff = "^0.1.5"

[tool.poetry.scripts]
start = "main:main"
test-lawtalk = "pytest:main"
test-law-open-api = "pytest:main"
test-easylaw = "pytest:main"

# 크롤러 플러그인 등록
[tool.poetry.plugins."ddobak.crawlers"]
lawtalk = "lawtalk.lawtalk_crawler:LawtalkCrawler"
easylaw = "easylaw.easylaw_crawler:EasylawCrawler"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["S101", "PLR0913", "PLR0912", "PLR0915"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
